@@ -84,32 +84,29 @@ class template_table extends \admin_setting {
         $table->head = array(
             get_string('name'),
             get_string('version'),
-            get_string('description'),
-            get_string('edit')
+            get_string('description')
         );
-        $table->headspan = array(1,1,1,1);
+        $table->headspan = array(1,1,1);
         $table->colclasses = array(
-            'templatenamecol','templateversioncol', 'templateinstructionscol', 'templateeditcol'
+            'templatenamecol','templateversioncol', 'templateinstructionscol'
         );
 
         //loop through templates and add to table
         foreach ($template_details as $item) {
             $row = new \html_table_row();
 
-
-            $titlecell = new \html_table_cell($item->title);
+            $titletext =  \html_writer::link($item->url, $item->title);
+            $titlecell = new \html_table_cell($titletext);
             $versioncell = new \html_table_cell($item->version);
             $instructionscell = new \html_table_cell($item->instructions);
 
-            $editlink = \html_writer::link($item->url, get_string('edit'));
-            $editcell = new \html_table_cell($editlink);
         /*
             $deleteurl = new \moodle_url($actionurl, array('itemid'=>$item->id,'action'=>'confirmdelete'));
             $deletelink = \html_writer::link($deleteurl, get_string('deleteitem', "local_trigger"));
             $deletecell = new \html_table_cell($deletelink);
         */
             $row->cells = array(
-                $titlecell,$versioncell, $instructionscell, $editcell
+                $titlecell,$versioncell, $instructionscell
             );
             $table->data[] = $row;
         }
